Add auth button

--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -26,5 +26,10 @@
 
 .test-btn {
     width: 100%;
-    border: 3px solid;
+    border: 1px solid;
+}
+
+.auth-btn {
+    width: 100%;
+    border: 1px solid;
 }
